issue with jumping buttons fixed, profileRecords fixed

--- a/src/styles/ui/Confetti.scss
+++ b/src/styles/ui/Confetti.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // position: absolute;
-  // padding-top: 300px;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  padding-top: 300px;
+  width: 100%;  // was  width: 100vw;
+  height: 100%; // was height: 100vh;
   overflow: hidden;
   z-index: 5;
   top: 10%;
