--- a/src/styles/views/GameView.scss
+++ b/src/styles/views/GameView.scss
@@ -287,8 +287,9 @@
   // SECTION WHERE cards for Card Czar and Normal player are 
   &.cardsSection{
     // background-color: teal;
+    min-height: 15em;
     // height: 35VH;
-    height: 100%;
+    // height: 100%;
     width: 100%;
     margin-top: 0.7VH;
     padding: 0.1em;
@@ -339,6 +340,7 @@
       width: 100%;
       height: 80%;
       justify-content: space-evenly;
+      // min-height: 12em;
       // justify-content: center;
       &.child {
         width: 10%;
@@ -415,13 +417,14 @@
     width: 100%;
     z-index: 10;
     position: relative;
+    // height: 10VH;
     // for alignment of buttons 
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     button{
       height: 2.5em;
-      font-size: 1m;
+      font-size: 1em;
     }
   }
 
@@ -449,6 +452,7 @@
     color: white;
   }
   border-radius: $borderRadius;
+  margin: 0.1em;
   cursor: pointer;
   opacity: 1;
   color: black;
